-add validations -add react sample application
